--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <P>Tue June 16 2021</P>
     <div class="image-section">
         <div class="section-style">
-            <img src="download.jfif">
+            <img src="xx.jfif">
             <p>Mountain</p>
         </div>
         <div class="section-style">
-            <img src="images%20(1).jfif">
+            <img src="x1.jfif">
             <p>Parrots</p>
         </div>
     </div>
     <div class="image-section">
         <div class="section-style">
-            <img src="images%20(2).jfif">
+            <img src="x3.jfif">
             <p>Bridge</p>
         </div>
         <div class="section-style">
-            <img src="images%20(3).jfif">
+            <img src="x4.jfif">
             <p>Water Fall</p>
         </div>
     </div>
